--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,7 +1058,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = for index in city indices: \n",
-    "    print(index+1 + ' ' + city_name)\n",
+    "    print(index+1 + ' ' + city_names[0])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
