--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,14 +1053,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1. Buenos Aires', '2. Toronto', '3. Marakesh', '4. Albuquerque', '5. Los Cabos', '6. Greenville', '7. Archipelago Sea', '8. Pyeongchang', '9. Walla Walla Valley', '10. Salina Island', '11. Solta', '12. Iguazu Falls']\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices: \n",
     "    names_and_ranks.append(str(index+1) + '. ' + city_names[index])\n",
-    "print(names_and)\n",
+    "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
