--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,14 +1053,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1. Buenos Aires', '2. Toronto', '3. Marakesh', '4. Albuquerque', '5. Los Cabos', '6. Greenville', '7. Archipelago Sea', '8. Pyeongchang', '9. Walla Walla Valley', '10. Salina Island', '11. Solta', '12. Iguazu Falls']\n"
+      "1. Buenos Aires\n",
+      "2. Toronto\n",
+      "3. Marakesh\n",
+      "4. Albuquerque\n",
+      "5. Los Cabos\n",
+      "6. Greenville\n",
+      "7. Archipelago Sea\n",
+      "8. Pyeongchang\n",
+      "9. Walla Walla Valley\n",
+      "10. Salina Island\n",
+      "11. Solta\n",
+      "12. Iguazu Falls\n"
      ]
     }
    ],
@@ -1068,7 +1079,7 @@
     "names_and_ranks = []\n",
     "for index in city_indices: \n",
     "    names_and_ranks.append(str(index+1) + '. ' + city_names[index])\n",
-    "    print(names_and_ranks)\n",
+    "    print(names_and_ranks[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
