--- a/index.ipynb
+++ b/index.ipynb
@@ -1079,7 +1079,7 @@
     "names_and_ranks = []\n",
     "for index in city_indices: \n",
     "    names_and_ranks.append(str(index+1) + '. ' + city_names[index])\n",
-    "    print(names_and_ranks[index])\n",
+    "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
@@ -1117,7 +1117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for "
    ]
   },
   {
