--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,28 +1053,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. Buenos Aires\n",
-      "2. Toronto\n",
-      "3. Marakesh\n",
-      "4. Albuquerque\n",
-      "5. Los Cabos\n",
-      "6. Greenville\n",
-      "7. Archipelago Sea\n",
-      "8. Pyeongchang\n",
-      "9. Walla Walla Valley\n",
-      "10. Salina Island\n",
-      "11. Solta\n",
-      "12. Iguazu Falls\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices: \n",
@@ -1118,7 +1099,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for "
+    "for index in c"
    ]
   },
   {
