--- a/index.ipynb
+++ b/index.ipynb
@@ -1099,7 +1099,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for index in city_indices:"
+    "for index in city_indices:\n",
+    "    "
    ]
   },
   {
