--- a/index.ipynb
+++ b/index.ipynb
@@ -1138,7 +1138,7 @@
    "source": [
     "city_populations = []\n",
     "for index in city_indices:\n",
-    "    city_populations.append(cities[nid])"
+    "    city_populations.append(cities[index]['Population'])"
    ]
   },
   {
