--- a/index.ipynb
+++ b/index.ipynb
@@ -2139,7 +2139,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for "
    ]
   },
   {
