--- a/index.ipynb
+++ b/index.ipynb
@@ -2141,7 +2141,7 @@
    "source": [
     "city_areas = []\n",
     "for index in city_indices:\n",
-    "    "
+    "    city_areas.append()"
    ]
   },
   {
